<resources>
    <string name="app_name">Math Flash Cards</string>
    <string name="title_activity_flash_card">Flash Cards</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="your_answer">Your Answer:</string>
    <string name="submit_answer">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiplication">Multiplication</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>
    <string name="division">Division</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_image">Title Image</string>
    <string name="practice">Math Practice</string>

    <string name="banner_ad_unit_id">ca-app-pub-0959410565463062/4898361711</string>
</resources>
