<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragment_FlashCard">

    <LinearLayout
        android:id="@+id/llCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="@dimen/count_icon_width"
                android:layout_height="@dimen/count_icon_height"
                android:src="@drawable/smile"/>

            <TextView
                android:id="@+id/txtRight"
                android:text="0"
                android:textSize="@dimen/text_height"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="@dimen/count_icon_width"
                android:layout_height="@dimen/count_icon_height"
                android:src="@drawable/frown"/>

            <TextView
                android:id="@+id/txtWrong"
                android:text="0"
                android:textSize="@dimen/text_height"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llCount"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageSwitcher
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:id="@+id/isOne" />

        <ImageSwitcher
            android:layout_marginTop="50dp"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:id="@+id/isTwo"/>

        <ImageSwitcher
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:id="@+id/isThree"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center|bottom">

        <LinearLayout
            android:id="@+id/llAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginRight="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblAnswer"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_answer"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAnswer2"
            android:layout_below="@+id/llAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAnswer"
                android:background="@drawable/answer"
                android:layout_width="200dp"
                android:textAlignment="center"
                android:textSize="@dimen/text_height"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtAnswer"
                android:background="@drawable/buttons_submit"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="5dp"
                android:text="@string/submit_answer"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButton79"
            android:layout_below="@+id/llAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_below="@+id/llAnswer2"
                android:id="@+id/btn7"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/seven"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn8"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/eight"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn9"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/nine"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButton46"
            android:layout_below="@+id/llButton79"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/four"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn5"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/five"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn6"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/six"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButton13"
            android:layout_below="@+id/llButton46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/one"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn2"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/two"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn3"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/three"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButton0"
            android:layout_below="@+id/llButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/clear"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn0"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/_0"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnBack"
                android:layout_margin="2dp"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons_number"
                android:text="@string/back"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
